--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
 Felix Oluwagbemileke Ogundipe <foogundipe@student.oauife.edu.ng>
 Oke Olaoluwa Timothy<olaoluwaoke4@gmail.com>
-App URl <https://car-pooling-7cm0.onrender.com>
+App URl <https://test-swep-bc347679ea2c.herokuapp.com/>
